ansible/roles/ocp-workload-mediawiki/files/mariadb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: mediawiki
  labels:
    app: mariadb
    service: mariadb
spec:
  selector:
    app: mariadb
    service: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: mariadb
  namespace: mediawiki
  labels:
    app: mariadb
    service: mariadb
spec:
  replicas: 1
  selector:
    app: mariadb
    service: mariadb
  strategy:
    type: Rolling
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
  test: false
  triggers:
    - type: ConfigChange
  template:
    metadata:
      labels:
        app: mariadb
        service: mariadb
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - image: docker.io/centos/mariadb-102-centos7
          name: mariadb
          terminationMessagePath: /dev/termination-log
          workingDir: /
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: mariadb
              mountPath: /var/lib/mysql/data
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
