ansible/roles/ocp-workload-mediawiki/files/mediawiki-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mediawiki
  namespace: mediawiki
  labels:
    app: mediawiki
    service: mediawiki
spec:
  to:
    kind: Service
    name: mediawiki
  port:
    targetPort: web
